# rust-substrate-course

./: .gitignore
basic_early_return/: Cargo.toml
basic_functions/: Cargo.toml
basic_safe_memory/: Cargo.toml
basic_scope/: Cargo.toml
basic_types/: Cargo.toml
cipher_block_chaining/: Cargo.toml
contract_trader/: .gitignore  Cargo.toml  data.py  lib.rs  polkadot_prices.csv  strategies.rs
diffie_hellman/: Cargo.toml
polkadot_sdk_solochain_template/: .gitignore
repeated_squaring/: Cargo.toml
rust_class_10_21/: Cargo.toml
rust_class_10_23/: Cargo.toml
rust_class_10_24/: Cargo.toml
rust_class_10_28/: Cargo.toml
rust_class_10_29/: Cargo.toml
rust_class_10_31/: Cargo.toml
rust_class_10_31_code1/: .gitignore  Cargo.toml  build.rs  build.sh
rust_class_10_31_code1/src/: lib.rs
rust_class_11_04/: class.py
rust_class_11_05/: Cargo.toml  build.sh  optimized.wasm  optimized.wat
rust_class_11_05_executer/: Cargo.toml
rust_class_11_05_executer/src/: main.rs
rust_class_11_05_full_example/: .gitignore  Cargo.toml  README.md  build.sh  rust-toolchain.toml
rust_class_11_18_substrate/: Cargo.toml
rust_class_11_21_example_scale/: Cargo.toml
rust_class_11_27_traits_tutorial/: Cargo.toml
rust_exercises_10_21/: Cargo.toml
rust_exercises_10_23/: Cargo.toml
rust_exercises_10_24/: Cargo.toml
rust_exercises_10_29/: Cargo.toml
rust_exercises_10_31/: Cargo.toml
rust_exercises_11_14_simple_storage/: Cargo.toml  lib.rs  readme.md
rust_exercises_11_21_scoring/: Cargo.toml  lib.rs
solochain-ui/: index.js  package.json
(+62 files in other folders)
